# django-unified-signals

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  liccheck.ini  manage.py  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yaml  publish-pypi.yaml  publish-testpypi.yaml  release.yaml  workflow_security.yaml
src/unified_signals/: __init__.py  signals.py
tests/: test_signals.py
tests/testapp/: settings.py
unified_signals/: exceptions.py  signals.py
