[tool.poetry]
name = "django-unified-signals"
version = "0.2.0"
description = "Django Signals extension for unifying data passed to receivers."
authors = ["Janusz Kamieński <200957+ivellios@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ivellios/django-unified-signals"
repository = "https://github.com/ivellios/django-unified-signals"
keywords = ["django", "signals"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]
packages = [
    { include = "unified_signals", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0,<6"
django-stubs = "^4.2.4,<6"
pytest-cov = "^4.1.0"
setuptools = "^75.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ipython = "^8.18.1"
ipdb = "^0.13.13"
liccheck = "^0.9.1"
pytest-django = "^4.5.2"
pytest-watch = "^4.2.0"
safety = "^3.2.8"
checkov = "^3.2.257"
jinja2 = "^3.1.4"

[tool.mypy]
plugins = [
    "mypy_django_plugin.main"
]

[tool.django-stubs]
django_settings_module = "tests.testapp.settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
