[project]
name = "django-unified-signals"
version = "0.4.1"
description = "Django Signals extension for unifying data passed to receivers."
authors = [{ name = "Janusz Kamieński", email = "200957+ivellios@users.noreply.github.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "django",
    "signals",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django>=5.2,<7.0",
]

[project.urls]
Homepage = "https://github.com/ivellios/django-unified-signals"
Repository = "https://github.com/ivellios/django-unified-signals"

[dependency-groups]
dev = [
    "ruff>=0.15.22,<0.16",
    "ipython>=9.15.0,<10",
    "ipdb>=0.13.13,<0.14",
    "liccheck>=0.9.2,<0.10",
    "pytest-django>=4.12.0,<5",
    "pytest-watch>=4.2.0,<5",
    "safety>=3.8.1,<4",
    "django-stubs>=5.2,<7.0",
    "pytest-cov>=7.1.0,<8",
    "jinja2>=3.1.6,<4",
    "mypy>=2.3.0,<3",
    "python-semantic-release>=10,<11",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["src/unified_signals"]

[tool.hatch.build.targets.wheel]
include = ["src/unified_signals"]

[tool.hatch.build.targets.wheel.sources]
"src/unified_signals" = "unified_signals"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main"
]

[tool.django-stubs]
django_settings_module = "tests.testapp.settings"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "{version}"
major_on_zero = false
allow_zero_version = true
build_command = ""
commit_message = "chore(release): {version}"

[tool.semantic_release.branches.main]
match = "master"

[tool.semantic_release.remote]
type = "github"
